--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,6 +1,12 @@
+/*
 @import 'tailwindcss/base';
 @import 'tailwindcss/components';
 @import 'tailwindcss/utilities';
+*/
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
 .mega-menu {
     display: none;
