--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1122,6 +1122,9 @@ select {
 .whitespace-nowrap {
   white-space: nowrap;
 }
+.break-all {
+  word-break: break-all;
+}
 .rounded-md {
   border-radius: 0.375rem;
 }
